Upgrade command-fds to 0.3.0
This project was upgraded with external_updater.
Usage: tools/external_updater/updater.sh update external/rust/crates/command-fds
For more info, check https://cs.android.com/android/platform/superproject/main/+/main:tools/external_updater/README.md

Test: TreeHugger
Change-Id: I5a622b7a15d699dfb85d18768d63046a92537c54

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,21 +12,30 @@
 [package]
 edition = "2018"
 name = "command-fds"
-version = "0.2.2"
+version = "0.3.0"
 authors = ["Andrew Walbran <qwandor@google.com>"]
 description = "A library for passing arbitrary file descriptors when spawning child processes."
-keywords = ["command", "process", "child", "subprocess", "fd"]
+readme = "README.md"
+keywords = [
+    "command",
+    "process",
+    "child",
+    "subprocess",
+    "fd",
+]
 categories = ["os::unix-apis"]
 license = "Apache-2.0"
 repository = "https://github.com/google/command-fds/"
+
 [dependencies.nix]
-version = "0.22.0"
+version = "0.27.0"
+features = ["fs"]
 
 [dependencies.thiserror]
 version = "1.0.24"
 
 [dependencies.tokio-crate]
-version = "^1.0"
+version = "1.32.0"
 features = ["process"]
 optional = true
 default-features = false
